# pico_rfu

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  server.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Build_with_ARM_GNU_Toolchain.yml
DMX/include/: piodmx.h
DMX/src/: piodmx.cpp
EEPROM/: CMakeLists.txt
EEPROM/src/: EEPROM.cpp
FreeRTOS/: CMakeLists.txt
ProjectFiles/: CMakeLists.txt  fsdata_custom.c  main.cpp  memmap_full_elf.ld  memmap_ota.ld
ProjectFiles/dhcpserver/: dhcpserver.h
ProjectFiles/dnsserver/: dnsserver.h
ProjectFiles/include/: lwipopts.h  mbedtls_config.h  net.h
Schematics/Pico_RFU/: Pico_RFU.kicad_prl  Pico_RFU.kicad_pro  Pico_RFU.kicad_sch
bootloader/: CMakeLists.txt  firmwareblobler.py  main.cpp  memmap_boot.ld
bootloader/include/: cyw43_static_firmware.h  http_state.h  lwipopts.h  tcpserver.h
bootloader/include/firmware/: ota_wifi_firmware.h
fs/: CMakeLists.txt  console.css  console.html  console.js  fsdata_custom.c  index.html  keypad.html  keypad.js  login.js  makefsdata  script.js  settings.html  settings.js  styles.css
fs/website/: index.html  keypad.html  keypad.js  settings.html  settings.js  styles.css
keys/: CMakeLists.txt  README.md  pemtoc.py
